--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>G2 Quantix Solutions</h1>
+    <h1>G2 Quantix</h1>
     <p><em>Driving innovation at the intersection of biotech strategy, data science, and R&amp;D informatics</em></p>
     <p>At G2 Quantix Solutions, we empower organizations to translate complex biological data into strategic insights, optimizing R&amp;D processes and accelerating therapeutic breakthroughs.</p>
     <p>Contact us: <a href="mailto:info@g2quantix.com">info@g2quantix.com</a></p>
