--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
       padding: 2rem;
       text-align: center;
     }
-    .logo {
-      width: 50px;
-      height: 50px;
-      object-fit: contain;
-      margin-bottom: 1rem;
-    }
     h1 {
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
@@ -45,7 +39,13 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="G2 Quantix Solutions Logo" class="logo">
+    <img
+      src="logo.png"
+      alt="G2 Quantix Solutions Logo"
+      width="50"
+      height="50"
+      style="object-fit: contain; margin-bottom: 1rem;"
+    >
     <h1>G2 Quantix</h1>
     <p><em>Driving innovation at the intersection of biotech strategy, data science, and R&amp;D informatics</em></p>
     <p>At G2 Quantix Solutions, we empower organizations to translate complex biological data into strategic insights, optimizing R&amp;D processes and accelerating therapeutic breakthroughs.</p>
